test/should-fail/vsgc115.f3
/*
 * Regression test: VSGC-115: misleading error message from f3c
 *
 * @test/compile-error
 *
 * This should produce:
 *
 *     vsgc115.f3:29: incompatible types
 *     found   : String
 *     required: Number
 *     var x:Number = new String("ss");
 *                    ^
 *     1 error
 *     
 * instead of
 *
 *     vsgc115.f3:29: incompatible types
 *     found   : java.lang.String
 *     required: double
 *     var x:Number = new String("ss");
 *                    ^
 *     1 error
 *      *
 * There doesn't seem to be a way to provide .EXPECTED files 
 * for tests that are expected to fail compilation.
 *
 */

var x:Number = new String("ss");
